--- a/styles.css
+++ b/styles.css
@@ -6,16 +6,29 @@
 
 body {
   font-family: monospace;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
 }
 
 .game {
-  margin: 30px;
+  margin: 15px;
+  position: relative;
+}
+
+button {
+  font-family: monospace;
+  cursor: pointer;
+}
+
+.text--center {
+  text-align: center;
 }
 
 .balloon-grid {
   display: grid;
-  grid-template-columns: repeat(15, 1fr);
-  gap: 30px;
+  grid-template-columns: repeat(20, 1fr);
 }
 
 .balloon {
@@ -38,4 +51,82 @@ body {
   position: absolute;
   bottom: 0;
   left: 0;
+}
+
+.hidden {
+  display: none;
+}
+
+.store-btn {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  /*  */
+  font-size: 10px;
+  color: #858585;
+  background-color: #fff;
+  border: 1px solid currentColor;
+  /*  */
+  width: 35px;
+  aspect-ratio: 1/1;
+  /*  */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /*  */
+  transition: all 0.3s;
+}
+
+.store-btn:hover {
+  color: #000;
+  font-size: 16px;
+  /*  */
+  width: 50px;
+}
+
+.store {
+  padding: 10px;
+  font-size: 12px;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  background-color: #fff;
+  border: 1px solid #000;
+  height: 200px;
+  width: 140px;
+}
+
+.store-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.store-buy-btn {
+  border-radius: 0;
+  border: none;
+  padding: 2px;
+  background-color: #adadad;
+}
+.store-price {
+  color: #104d04;
+  font-weight: bold;
+}
+
+.store-title {
+  font-size: 16px;
+  margin-bottom: 6px;
+}
+
+.store-stats {
+  margin-bottom: 12px;
+}
+
+.close-store-btn {
+  position: absolute;
+  top: 6px;
+  right: 6px;
+  font-size: 14px;
+  border: none;
+  background-color: none;
+  color: #414141;
 }
