--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,23 @@ body {
   position: relative;
 }
 
+.screen {
+  /* background-color: red; */
+  border: 1px solid black;
+}
+
+.hotbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-top: 1px solid black;
+  padding: 0 15px;
+}
+
+.hotbar-logo {
+  font-size: 10px;
+}
+
 button {
   font-family: monospace;
   cursor: pointer;
@@ -58,42 +75,34 @@ button {
 }
 
 .store-btn {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  /*  */
-  font-size: 10px;
-  color: #858585;
+}
+
+.hotbar-btn {
+  font-size: 16px;
   background-color: #fff;
   border: 1px solid currentColor;
   /*  */
-  width: 35px;
-  aspect-ratio: 1/1;
+  padding: 6px 12px;
   /*  */
   display: flex;
   align-items: center;
   justify-content: center;
-  /*  */
-  transition: all 0.3s;
 }
-
-.store-btn:hover {
-  color: #000;
-  font-size: 16px;
-  /*  */
-  width: 50px;
-}
-
 .store {
   padding: 10px;
   font-size: 12px;
   position: absolute;
-  right: 0;
+  left: 0;
   bottom: 0;
   background-color: #fff;
   border: 1px solid #000;
   height: 200px;
   width: 140px;
+}
+
+.hotbar-buttons {
+  display: flex;
+  gap: 16px;
 }
 
 .store-item {
@@ -105,7 +114,7 @@ button {
   border-radius: 0;
   border: none;
   padding: 2px;
-  background-color: #adadad;
+  background-color: #d1d1d1;
 }
 .store-price {
   color: #104d04;
@@ -126,6 +135,11 @@ button {
   top: 6px;
   right: 6px;
   font-size: 14px;
+  width: 17px;
+  aspect-ratio: 1/1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   border: none;
   background-color: none;
   color: #414141;
